# robocup_home_working

./: .gitignore  CMakeLists.txt  Makefile  README.md  dev_environment.yml  setup.cfg  train.txt  wiki_launch.txt
arduino_test/: i2c_test.ino
config/: pin_config.yml
launch/: Fserver.launch
pyi2c/: __init__.py  rpi_i2c.py  utils.py
rpi_i2c_archives/: Makefile  dev_environment.yml  setup.py  upload_test_code.sh
rpi_i2c_archives/config/: pin_config.yml
rpi_i2c_archives/i2c_controller/: i2c_slave_controller.ino
rpi_i2c_archives/tests/: test_1_rpi_i2c.py  test_2_ard_nano.py
src/: face_rec_client.cpp  face_recognition.cpp
src/differential-drive/: CMakeLists.txt  README.md
src/differential-drive/scripts/: twist_to_motors.py  virtual_joystick.py
src/remote_joy/: CMakeLists.txt  package.xml
src/remote_joy/config/: vr_joystic.yml
src/remote_joy/scripts/: vr_remote.py
src/roboz_control/: CMakeLists.txt  package.xml
src/roboz_control/config/: pid_velocity.yaml  twist_to_motors.yaml  virtual_joystick.yaml
src/roboz_control/launch/: joy.launch  robot.launch
src/teleop_twist_keyboard/config/: teleop_keybord.yaml
src/teleop_twist_keyboard/launch/: teleop_keyboard.launch
src/teleop_twist_keyboard/scripts/: teleop_twist_keyboard.py
tests/: bluetooth_test.py  conftest.py  test_2_ard_nano.py  test_rpi_i2c.py
